# access-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CICD.md  alembic.ini  docker-compose.yml  openapi.json  package-lock.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml  monitoring.yml
Access Manager API/: Create Permission.bru  Create Role.bru  Create User.bru  Delete Permission.bru  Delete Role.bru  Delete User.bru  Login For Access Token.bru  Read Permission.bru  Read Permissions.bru  Read Role.bru  Read Roles.bru  Read User.bru  Read Users.bru  Update Permission.bru  Update Role.bru  Update User.bru  bruno.json
alembic/: env.py
alembic/versions/: 1ddf5e5e272f_create_initial_tables.py
docs/: CICD_SETUP.md  TROUBLESHOOTING.md
frontend/: Dockerfile  package-lock.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: LoginForm.tsx  UserList.tsx
frontend/src/services/: api.ts
helm/access-manager/: Chart.yaml  values.yaml
helm/access-manager/templates/: _helpers.tpl  deployment.yaml
scripts/: check-local.sh
src/access_manager/: __init__.py  crud.py  db.py  main.py  models.py  schemas.py  security.py
src/access_manager/core/: config.py
tests/: conftest.py  test_auth.py  test_permissions.py  test_roles.py  test_users.py
