[tool.poetry]
name = "access-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "access_manager", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = { extras = ["all"], version = "^0.115.12" }
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.4.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"